--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
 }
 
 dependencies {
+    implementation project(':data')
 
     // Kotlin components
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
